index.css
*{
    padding: 0;
    margin: 0;
    text-decoration: none;
}
:root{
    --font-bold:'Alfa Slab One',sans-serif;
    --font-strong:'Russo One', sans-serif;
    --font-regular:'Yantramanav', sans-serif;
    --font-button: monospace;
    --bg-color-reg: hsl(114, 61%, 94%);
    --bg-color-blur: hsla(114, 61%, 94%, 0.135);
    --color-sub:#ff3838;
    --color-hover:hsl(244, 100%, 83%);
    --text-color-dark: hsl(0,0,0);
    --text-color-light: rgb(255, 255, 255);
}

body{
    color: var(--text-color);
    background-color: var(--bg-color-reg);
    font-family: var(--font-regular);
    overflow-x: hidden;
}
.img{
    width: 100%;
    object-fit: contain;
}
.img1{
    width: 100%;
    object-fit: contain;
}
.nav{
    display: flex;
    position: sticky;
    top: 0;
    max-width: 100%;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    background-color:var(--bg-color-blur);
    backdrop-filter: blur(0.5rem);
    font-family: var(--font-strong);
    text-transform: uppercase;
    padding: 1rem;
    z-index: 5;
}
.navtitle{
    font-family: var(--font-regular);
    font-weight: bolder;
}
main{
    display: grid;
    grid-template-columns: 1fr 1fr;
    max-width: 100%;
}
a{
    color: var(--text-color);
}
.border-bottom{
    padding: 0.5rem;
    text-align: center;
    font-weight: bolder;
    border: none;
    background-color: transparent;
    text-transform: uppercase;
}
.border-bottom:hover{
    border-bottom: 0.2rem solid var(--color-sub);
}
.active{
    border-bottom: 0.2rem solid var(--color-sub);
}
.list{
    display: flex;
    list-style-type: none;
    gap: 1rem;
    align-items: center;
}
.button{
    background-color: var(--color-sub);
    color: var(--text-color-light);
    font-family: var(--font-strong);
    border: none;
    text-transform: uppercase;
    padding: 0.7rem;
}
.button:hover{
    background-color: var(--color-hover);
}
.button2{
    border:0.1rem solid  var(--color-sub);
    padding: 0.5rem;
    font-family: var(--font-strong);
    color: var(--color-sub);
    background-color: transparent;
}
.button2:hover{
    background-color: var(--color-hover);
    border: none;
    color: var(--text-color-light);
}    
.button3{
    border:0.1rem solid  var(--color-sub);
    border-radius: 5rem;
    padding: 0.3rem 0.3rem 0rem 0.3rem;
    font-family: var(--font-strong);
    color: var(--color-sub);
    background-color: transparent;
}
.button3:hover{
    background-color: var(--color-sub);
    border: none;
}
.button3:hover svg{
    fill:white !important;
}    
.max-width-60{
    max-width: 55%;
}
.max-width-80{
    max-width: 80%;
}
.text{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    justify-content: center;
    align-items: flex-start;
    text-align: left;
    margin-left: 1rem;
}
.max-font{
    font-family: var(--font-bold);
    font-size:3rem;

}
.min-font{
    font-size: 1rem;
    font-family: var(--font-strong);
}
.social-media{
    display: flex;
    gap: 0.7rem;
}
.footer{
    display: grid;
    grid-template-columns: 4fr 1fr 1fr;
    background-color: var(--color-sub);
    color: var(--text-color-light);
    padding: 2rem;
    gap: 3rem;
}
.footer ul {
    list-style-type: none;
}
.footer a:hover {
    text-decoration: underline;
}
.toggle-button{
    position: absolute;
    top: 0.75rem;
    right: 1rem;
    display:none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 20px;
}
.toggle-button .bar {
    height: 3px;
    width: 100%;
    background-color: black;
    border-radius: 10px;
}

@media screen and (max-width: 600px) {
    .toggle-button{
        display: flex;
        border: none;
        background-color: transparent;
        transition: all 0.3s linear;
    }
    .nav{
        display: flex;
        flex-direction: column;
        align-items: stretch;
    }
    .list{
        display: none;
        flex-direction: column;
    }
    main{
        grid-template-columns: 1fr;
        gap: 1rem;
        max-width: 100%;
    }
    .footer{
        grid-template-columns: 1fr;
        justify-content: center;
        align-content: center;
        align-items: center;
        gap: 1rem;
        margin: auto;
    }
    .img{
        width: 100%
        
    }
    .child4{
        grid-row-start: 4;
    }
    .child6{
        grid-row-start: 8;
    }
}

